@@ -1,5 +1,7 @@
 # Head
 
+- Can now generate tests in pure C as well as in Ruby using a new --write-tests-in-c option
+
 # 0.3.4 - 2014 December 1st
 
 - Fixed bug when output directory has been set and option set to compile and test C code
